manifests/tools/manifests/kubernetes-oidc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-oidc
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
  - host: iss.matoru.ru
    http:
      paths:
      - path: /.well-known/openid-configuration
        pathType: Prefix
        backend:
          service:
            name: kubernetes
            port:
              name: https
      - path: /openid/v1/jwks
        pathType: Prefix
        backend:
          service:
            name: kubernetes
            port:
              name: https
